<resources>
    <string name="app_name">MOTA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation</string>
    <string name="close_nav">Close Navigation</string>
    <string name="account_setting">Account Setting</string>
    <string name="edit_account_details">Edit Account Details</string>
    <string name="change_password">Change Password</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you Sure you want to delete your account</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="old_password">OLD PASSWORD</string>

    <string name="user_name">USER NAME</string>
    <string name="select_gender">SELECT GENDER</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="change">Change</string>
    <string name="edit_user">EDIT USER</string>
    <string name="select_department">SELECT DEPARTMENT</string>

    <string-array name="department">
        <item>Computer Science</item>
        <item>Information Technology</item>
        <item> Data Science</item>
        <item>Biotechnology</item>
        <item>BMM</item>
        <item>BMS</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

</resources>