<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AdminFragments.AdminEditAccount">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/edit_user_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_user"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textStyle="bold">
        </TextView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                >
                <EditText
                    android:id="@+id/edit_text_admin_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:padding="20dp"
                    android:inputType="text"
                    android:background="@drawable/rounded"
                    android:backgroundTint="#F0EFEF"
                    android:layout_marginTop="15dp"
                    android:autofillHints=""
                    tools:ignore="VisualLintTextFieldSize">
                </EditText>
                <EditText
                    android:id="@+id/edit_text_admin_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:padding="20dp"
                    android:inputType="phone"
                    android:background="@drawable/rounded"
                    android:backgroundTint="#F0EFEF"
                    android:layout_marginTop="15dp"
                    android:autofillHints=""
                    tools:ignore="VisualLintTextFieldSize">
                </EditText>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_gender"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="15dp">
                </TextView>

                <Spinner
                    android:id="@+id/edit_text_admin_gender"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/account_setting"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:spinnerMode="dropdown"
                    android:entries="@array/gender"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_department"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="15dp">
                </TextView>
                <Spinner
                    android:id="@+id/edit_text_admin_department"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/account_setting"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:entries="@array/department"
                    android:spinnerMode="dropdown"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:paddingBottom="20dp">
                    <Button
                        android:id="@+id/close_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/close"
                        android:textSize="17sp"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:layout_alignParentStart="true"
                        android:paddingHorizontal="50dp"
                        android:backgroundTint="@color/red">
                    </Button>

                    <Button
                        android:id="@+id/change_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:backgroundTint="@color/my_color"
                        android:paddingHorizontal="35dp"
                        android:text="@string/change"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        tools:ignore="RelativeOverlap"
                        ></Button>
                </RelativeLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>