<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UserFragments.UserChangePassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="20dp"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/change_password_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="30dp">
            </TextView>

            <EditText
                android:id="@+id/old_user_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:backgroundTint="#F1F0F0"
                android:minHeight="48dp"
                android:background="@drawable/rounded"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="20dp"
                tools:ignore="VisualLintTextFieldSize"
                android:autofillHints=""
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/new_user_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:minHeight="48dp"
                android:background="@drawable/rounded"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:backgroundTint="#F1F0F0"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="20dp"
                tools:ignore="VisualLintTextFieldSize"
                android:autofillHints=""
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/confirm_user_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:minHeight="48dp"
                android:background="@drawable/rounded"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:backgroundTint="#F1F0F0"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="20dp"
                tools:ignore="VisualLintTextFieldSize"
                android:autofillHints=""
                android:inputType="textPassword"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">
                <Button
                    android:id="@+id/user_change_password_close_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:layout_alignParentStart="true"
                    android:paddingHorizontal="50dp"
                    android:backgroundTint="@color/red"/>

                <Button
                    android:id="@+id/user_change_password_edit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:backgroundTint="@color/my_color"
                    android:paddingHorizontal="52dp"
                    android:text="@string/edit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    tools:ignore="RelativeOverlap"/>

            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>