<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#D6D6D6"
    tools:context=".AdminFragments.AdminAccountSetting">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/account_setting_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_setting"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="35dp">
            </TextView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="10dp">
                    <TextView
                        android:id="@+id/edit_account_details_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_account_details"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:padding="10dp"
                        >
                    </TextView>
                    <TextView
                        android:id="@+id/change_password_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/change_password"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:padding="10dp">
                    </TextView>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/delete_account_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/delete_account"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:padding="10dp"
                            android:layout_alignParentStart="true">
                        </TextView>
                        <Button
                            android:id="@+id/admin_delete_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/delete"
                            android:textColor="@color/white"
                            android:textSize="17sp"
                            android:textAllCaps="false"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="20dp"
                            android:paddingHorizontal="20dp"
                            android:backgroundTint="@color/red"
                            tools:ignore="RelativeOverlap">
                        </Button>
                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>