<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".AdminFragments.AdminDelete">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/are_you_sure_you_want_to_delete_your_account"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black">
            </TextView>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <Button
                    android:id="@+id/admin_account_delete_close_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/my_color"
                    android:paddingHorizontal="52dp"
                    android:text="@string/no"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="17sp"></Button>
                <Button
                    android:id="@+id/admin_account_delete_continue_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textSize="17sp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:paddingHorizontal="50dp"
                    android:backgroundTint="@color/red"
                    tools:ignore="RelativeOverlap">
                </Button>
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>